最初のコミット

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p>
         希望職種：バックエンドエンジニア<br>
         学習中言語：Ruby,Rails<br>
-        希望勤務地：福岡  大阪<br>
+        希望勤務地：福岡  大阪　東京<br>
         希望年収：300万円/年 以上
       </p>
       <div class="lead">興味を持って頂きましたらご連絡ください！</div>
@@ -99,8 +99,8 @@
             <div class="info">
               <h3 class="top_info">パーソナル情報</h3>
               <p>
-                長岡 勇輝（ながおか ゆうき）<br>
-                1987年05月12日生まれ / 32歳
+                丸内　綜馬（まるうち　そうま）<br>
+                1994年11月24日生まれ / 25歳
               </p>
             </div>
           </section>
@@ -115,10 +115,8 @@
                 <li>
                   ・2017年4月 ： 佐賀県警察に採用
                   <div class="indent">
-                    「挑戦する経営」という会社ポリシーに惹かれ入社を決意しました。<br>
-                    入社2年目で営業部の企画課に配属されました。<br>
-                    当時の営業部の課題は各取引先に柔軟な料金形態を提示出来ない事。<br>
-                    それに対し非常に柔軟な料金を設定可能な運用を提案し、多くの部署と交渉の上実現しました。これにより私はその年に<span class="red-bold">最高評価を頂きました。</span><br>
+                    国民の安全と安心を守ることを指名
+                    <span class="red-bold">最高評価を頂きました。</span><br>
                     真剣に課題と向き合い、毎日毎日考えて改善策を閃きました。<br>
                     <span class="red-bold">常に頭を使い改善策を考える癖</span>がこの時身につきました。
                   </div>
@@ -135,8 +133,8 @@
                     <span class="red-bold">誰もやった事がない取り組みにより状況が好転する時、仕事へのやりがいや充実感を感じます。</span>
                   </div>
                 </li>
-                <li>・2019年11月 ： 食品会社（製造メーカー) 退職</li>
-                <li>・現在転職活動中</li>
+                
+                <li>・現在、会社に勤務しながら転職活動中</li>
               </ul>
             </div>
           </section>
