SNSなどの変更

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p>
         希望職種：バックエンドエンジニア<br>
         学習中言語：Ruby,Rails<br>
-        希望勤務地：福岡  大阪　東京<br>
+        希望勤務地：福岡  大阪  東京<br>
         希望年収：300万円/年 以上
       </p>
       <div class="lead">興味を持って頂きましたらご連絡ください！</div>
@@ -83,9 +83,9 @@
           <img src="image/yuki-profile2.jpg" class="profile_image" alt="長岡 勇輝（ながおか ゆうき）">
           <div class="sns">
             <ul class="text_center">
-              <li><a href="https://twitter.com/freepc_yuki" class="twitter" target="_blank">Twitter</a></li>
-              <li><a href="https://github.com/risottoupdate" class="github" target="_blank">GitHub</a></li>
-              <li><a href="https://qiita.com/Yuki_Nagaoka" class="Qiita" target="_blank">Qiita</a></li>
+              <li><a href="https://twitter.com/MaruSo_trainig" class="twitter" target="_blank">Twitter</a></li>
+              <li><a href="https://github.com/maruuchi" class="github" target="_blank">GitHub</a></li>
+              <li><a href="https://qiita.com/wa-ma" class="Qiita" target="_blank">Qiita</a></li>
               <li><a href="mailto:freepc.yuki@gmail.com" class="email" target="_blank">E-mail</a></li>
             </ul>
           </div>
@@ -143,7 +143,7 @@
               <i class="far fa-hand-point-up"></i>
             </div>
             <div class="info">
-              <h3 class="top_info">2019年に学習したプログラミングスキル</h3>
+              <h3 class="top_info">2020年に学習したプログラミングスキル</h3>
               <p class="red-bold">5月16日から現在まで1日も休む事なく継続して学習を続けています</p>
               <ul>
                 <li>5月16日〜5月27日( 12 日) ： HTML,CSS</li>
