共同開発の説明文の作成

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
         </div>
       </div>
 
-      <h3 class="content_title">Weight-Controller</h3>
+      <h3 class="content_title">Weight-Management</h3>
       <div class="container">
         <div class="left_space">
           <p>制作したアプリへのリンク</p>
@@ -337,8 +337,9 @@
             <div class="info">
               <h4 class="top_info">アプリの概要</h4>
               <ul>
-                <li>・『摂取カロリー」「消費カロリー」「体重」をメモしてグラフに表示するアプリ </li>
+                <li>・『体重』「歩数」を入力しグラフで表示するアプリ </li>
                 <li>・RailsのChart.jsとJavaScriptを使ってグラフ処理を実装してみたく作ったアプリ</li>
+                <li>・Rails5とRails6のバージョンの違いを理解するために作成しました</li>
               </ul>
             </div>
           </section>
@@ -348,7 +349,7 @@
             </div>
             <div class="info">
               <h4 class="top_info">ソースコード</h4>
-              <a href="https://github.com/risottoupdate/weight_controller" class="github blue-link" target="_blank">GitHub(Weight_Controller)</a>
+              <a href="https://github.com/maruuchi/health_care" class="github blue-link" target="_blank">GitHub(Weight_Management)</a>
             </div>
           </section>
           <section class="flex">
@@ -361,7 +362,6 @@
                 <li>・投稿したデータをModelで処理して、JavaScriptへ値を渡して画面に表示</li>
                 <li>・体重とカロリーの二軸を表示。メモリ数値も表示データに応じて動的に変化</li>
                 <li>・Deviseを使用したログイン機能実装</li>
-                <li>・Ransackを使用した検索機能の実装</li>
                 <li>・RSpecを使用してテストコードの実装（現在作成中）</li>
                 <li>・carrierwaveを使用した画像の投稿機能の実装（現在製作中）</li>
                 <li>・こちらもAWS上で動作しております</li>
@@ -377,7 +377,6 @@
               <ul>
                 <li>・Chart.js：グラフ描写</li>
                 <li>・gon：データ受け渡し</li>
-                <li>・Ransack：検索機能</li>
                 <li>・Devise：ログイン機能</li>
                 <li>・RSpec：テストコード</li>
                 <li>・pry-byebug：アプリデバッグ</li>
@@ -415,11 +414,11 @@
             <div class="info">
               <h4 class="top_info">こだわりポイント</h4>
               <ul>
-                <li>・所属するオンラインサロンのサロンオーナー（Rubyエンジニア）がPMとなり、サロンメンバー４名と合同でアプリ開発</li>
-                <li>・trelloでタスク管理。挑戦したいタスクに参加し、完了したらタスクステータスを完了にする</li>
-                <li>・GitHubからCloneして、ローカル環境で作った機能をGitHubのリモートリポジトリへpushし、プルリクを送付。レビューして頂き問題無ければマージして頂く</li>
-                <li>・アプリ仕様書を作成し、メンバーと相談してブラッシュアップ中</li>
-                <li>・現在も作成中</li>
+                <li>・所属しているオンラインサロンのメンター１人（現役エンジニア）にレビューしていただいた。</li>
+                <li>・trelloでタスク管理しています。挑戦したいタスクに参加し、完了したらタスクステータスを完了にする</li>
+                <li>・GitHubからCloneして、ローカル環境で作った機能をGitHubのリモートリポジトリへpushし、プルリクを送付。メンターの方にレビューして頂き問題無ければマージして頂く。</li>
+                <li>・参加メンバーと相談してブラッシュアップ中</li>
+                <li>・現在作成中</li>
               </ul>
             </div>
           </section>
