経歴の修正

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         希望職種：バックエンドエンジニア<br>
         学習中言語：Ruby,Rails<br>
         希望勤務地：福岡  大阪  東京<br>
-        希望年収：300万円/年 以上
+        希望年収：280万円/年 以上
       </p>
       <div class="lead">興味を持って頂きましたらご連絡ください！</div>
     </div>
@@ -44,7 +44,6 @@
           <li><a href="#section1">about me</a></li>
           <li><a href="#section2">Ruby</a></li>
           <li><a href="#section3">Rails</a></li>
-          <li><a href="#section4">WordPress</a></li>
           <li><a href="#section5">JavaScript</a></li>
           <li><a href="#section6">個人サービス</a></li>
           <li><a href="#section7">Other</a></li>
@@ -65,7 +64,6 @@
               <li><a href="#section1">about me</a></li>
               <li><a href="#section2">Ruby</a></li>
               <li><a href="#section3">Rails</a></li>
-              <li><a href="#section4">WordPress</a></li>
               <li><a href="#section5">JavaScript</a></li>
               <li><a href="#section6">個人サービス</a></li>
               <li><a href="#section7">Other</a></li>
@@ -115,15 +113,19 @@
                 <li>
                   ・2017年4月 ： 佐賀県警察に採用
                   <div class="indent">
-                    国民の安全と安心を守ることを指名
-                    <span class="red-bold">最高評価を頂きました。</span><br>
+                    国民の安全・安心を守るというポリシーに惹かれ警察官になりました。<br>
+                    半年間、警察学校で様々な訓練を行い、<span class="red-bold">自ら取り組む姿勢や学生時代の経験を評価</span>され、高校卒業の方々の指導にもあたりました。<br>
+                    卒業後は警察署の地域課に配属されて交番勤務を経験。<br>
+                    管轄地域の情報不足を補うため休日に管轄地域を歩き回り、地理把握につとめ、感じた事をメモし現場活動に生かしました。<br>
+                    また上司や先輩、地域住民の方々に、危険箇所、交通事故多発地域等を聞き込み情報収集を実施。<br>
+                    感じた事、収集した情報を基に地図に落とし込み、地域の月報として、役場に配布しました。<br>
                     真剣に課題と向き合い、毎日毎日考えて改善策を閃きました。<br>
-                    <span class="red-bold">常に頭を使い改善策を考える癖</span>がこの時身につきました。
                   </div>
+                        <span class="red-bold">→継続力、行動力や改善策を考える力</span>が身につきました。
                 </li>
                 <li>・2017年12月 ： 佐賀県警察 退職</li>
-                <li>
-                  ・2018年4月 ： 株式会社SUMCO 就職
+
+                <li>・2018年4月 ： 株式会社SUMCO 就職
                   <div class="indent">
                     祖父が創業した会社に転職しました。<br>
                     工場責任者となり、多くの改善を実行しました。<br>
@@ -414,9 +416,9 @@
             <div class="info">
               <h4 class="top_info">こだわりポイント</h4>
               <ul>
-                <li>・所属しているオンラインサロンのメンター１人（現役エンジニア）にレビューしていただいた。</li>
-                <li>・trelloでタスク管理しています。挑戦したいタスクに参加し、完了したらタスクステータスを完了にする</li>
-                <li>・GitHubからCloneして、ローカル環境で作った機能をGitHubのリモートリポジトリへpushし、プルリクを送付。メンターの方にレビューして頂き問題無ければマージして頂く。</li>
+                <li>・所属しているオンラインサロンのメンター１人(現役エンジニア)がPMとなり、参加者４人と一緒にアプリ開発</li>
+                <li>・trelloでタスクを管理。挑戦したいタスクを作成、参加し、完了したらタスクステータスを完了にする</li>
+                <li>・GitHubからCloneして、ローカル環境で作った機能をGitHubのリモートリポジトリへpushし、プルリクを送付。メンターの方にレビューしていただき問題が無ければマージしていただく。</li>
                 <li>・参加メンバーと相談してブラッシュアップ中</li>
                 <li>・現在作成中</li>
               </ul>
@@ -436,54 +438,7 @@
       </div>
     </section>
 
-    <section class="text-center back_dark padding_top" id="section4">
-      <div class="front_text">WordPress<h2 class="back_text">WordPress</h2></div>
-      <h3 class="content_title">自作テーマ作成</h3>
-      <div class="container">
-        <div class="left_space">
-          <p>自作テーマを利用した個人ブログ</p>
-          <a href="https://www.life-is-a-journey.work" target="_blank"><img src="image/life_if_a_journey.png" alt="LIFE IS A JOURNEY"></a>
-        </div>
-        <div class="right_space">
-          <section class="flex">
-            <div class="icon">
-              <i class="fas fa-chalkboard"></i>
-            </div>
-            <div class="info">
-              <h4 class="top_info">アプリの概要</h4>
-              <ul>
-                <li>・初めて作成したWordPressの自作テーマ</li>
-                <li>・ブログデザインから作成</li>
-                <li>・記事追加、アイキャッチ画像の表示、お問い合わせ機能、目次、検索機能等、一般的な機能は実装</li>
-              </ul>
-            </div>
-          </section>
-          <section class="flex">
-            <div class="icon">
-              <i class="fas fa-code"></i>
-            </div>
-            <div class="info">
-              <h4 class="top_info">ソースコード</h4>
-              <a href="https://github.com/risottoupdate/life_is_a_journer" class="github blue-link">GitHub(life_is_a_journey)</a>
-            </div>
-          </section>
-          <section class="flex">
-            <div class="icon">
-              <i class="far fa-lightbulb"></i>
-            </div>
-            <div class="info">
-              <h4 class="top_info">こだわりポイント</h4>
-              <ul>
-                <li>・WordPressのコード作成のため、PHPの基礎を一通り学習</li>
-                <li>・投稿記事のURLをTwitterで投稿すると、サムネイル画像が表示されリンクとなる</li>
-                <li>・会話風な記事を作る事ができるふきだし機能を、ショートコードで作成</li>
-                <li>・レスポンシブ対応</li>
-              </ul>
-            </div>
-          </section>
-        </div>
-      </div>
-    </section>
+    
 
     <section class="text-center padding_top" id="section5">
       <div class="front_text">Javascript<h2 class="back_text">Javascript</h2></div>
