職務経歴の修正

--- a/index.html
+++ b/index.html
@@ -119,9 +119,8 @@
                     管轄地域の情報不足を補うため休日に管轄地域を歩き回り、地理把握につとめ、感じた事をメモし現場活動に生かしました。<br>
                     また上司や先輩、地域住民の方々に、危険箇所、交通事故多発地域等を聞き込み情報収集を実施。<br>
                     感じた事、収集した情報を基に地図に落とし込み、地域の月報として、役場に配布しました。<br>
-                    真剣に課題と向き合い、毎日毎日考えて改善策を閃きました。<br>
                   </div>
-                        <span class="red-bold">→継続力、行動力や改善策を考える力</span>が身につきました。
+                  <span class="red-bold">→継続力、行動力や観察力</span>が身につきました。
                 </li>
                 <li>・2017年12月 ： 佐賀県警察 退職</li>
 
