職務経歴書の変更

--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
 
                 <li>・2018年4月 ： 株式会社SUMCO 就職
                   <div class="indent">
-                    祖父が創業した会社に転職しました。<br>
-                    工場責任者となり、多くの改善を実行しました。<br>
-                    人が辞めない仕組み作り、工場業務の作業効率化、得意なExcelVBAを駆使して事務所業務のマクロ化の推進等です。<br>
-                    人が辞めない様に取り組み、<span class="red-bold">辞める人が年間50%まで減少</span>しました。<br>
+                    ITの根幹を担っている半導体用シリコンウェーハの製造で世界トップレベルを誇る会社経営に魅力を感じ、転職を決意しました。<br>
+                    どうすれば作業が効率化できるのかを考えました。<br>
+                    作業用台車の作成や作業手順書の見直しを行い、作業時間の短縮（５分）に成功しました。担当工程における機械による品質悪化の改善、異常発生時の原因の追求と対策に努め、不良品の削減、効率化の徹底に当たっています。<br>
+                    また新人社員への教育を行い、新人がいち早く現場での作業に慣れてもらうための教育資料の作成にあたりました。<span class="red-bold">辞める人が年間50%まで減少</span>しました。<br>
                     本当に多くの変化を求め、前向きに行動してきました。<br>
                     <span class="red-bold">誰もやった事がない取り組みにより状況が好転する時、仕事へのやりがいや充実感を感じます。</span>
                   </div>
