どのようなエンジニアになりたいかに関する変更

--- a/index.html
+++ b/index.html
@@ -175,29 +175,29 @@
             <div id="future" class="info">
               <h3 class="top_info">どの様なエンジニアになりたいか</h3>
               <p>
-                親族が経営する会社を辞めてまでIT企業を志した理由は、<br>
-                <span class="red-bold">「大きな変化による価値を生み出し、多くの人の役に立ちたい」</span>からです。
+                大企業を辞めてまでIT企業を志した理由は、<br>
+                <span class="red-bold">「世の中の課題や悩みをITの力で解決し、多くの人の役に立ちたい」</span>からです。
               </p>
               <section>
-                <h4>1.変化を起こす</h4>
+                <h4>1.課題解決する</h4>
                 <p>
-                  今まで当たり前と思われていた事を疑い、常に改善案を考え、とにかくどんどん実行していきたいです。<br>
-                  新しい事に挑戦する事は非常に刺激的ですし、そこから見えてくる新しい景色があると考えています。それにより自分自身も大きく変化していけると思います。
+                  世の中を「より効率的に、より便利に」する力を持つのがIT技術であると考えています。<br>
+                  些細なことでも疑問を感じたら、解決策を考え、課題解決に繋がるように行動します。
                 </p>
               </section>
               <section>
                 <h4>2.価値を生む</h4>
                 <p>
-                  価値とはそのサービスや商品を支持してくれる人の数だと考えています。<br>
-                  私が提供するサービスにより多くの人に影響を与え、喜んで貰える事を常に意識して行動しております。<br>
+                  課題解決を考え改善策を実行し、人々に使っていただいて初めて「価値」に結びつくと考えています。<br>
+                  私が提供するサービスにより多くの人に価値を提供し、喜んで貰える事を常に考えて行動しております。<br>
                   また、ITにはそれが実現可能だと思い、ITへの道を志しました。
                 </p>
               </section>
               <section>
-                <h4>3.影響力を持つ</h4>
+                <h4>3.人とのつながりを大切にする</h4>
                 <p>
-                  私が挑戦の中で得た情報やスキルは、どんどん他者へ提供していこうと考えております。<br>
-                  SNSを使って情報発信したり、技術記事を発信したりと、積極的に実行していきます。それにより1人でも多くの人に影響を与える事ができ、それが僕の志す変化による価値提供に必要な条件だと考えています。
+                  IT技術を駆使して価値を提供する事で「人と人の繋がりが波及して欲しい」と考えております。<br>
+                  そのために、オンライン、オフライン問わず、様々な人を招待して勉強会を主催するなど、人と人の繋がりが 生み出せるような取り組みを積極的に実行していきます。
                 </p>
               </section>
             </div>
