--- a/index.html
+++ b/index.html
@@ -129,8 +129,7 @@
                     ITの根幹を担っている半導体用シリコンウェーハの製造で世界トップレベルを誇る会社経営に魅力を感じ、転職を決意しました。<br>
                     どうすれば作業が効率化できるのかを考えました。<br>
                     作業用台車の作成や作業手順書の見直しを行い、作業時間の短縮（５分）に成功しました。担当工程における機械による品質悪化の改善、異常発生時の原因の追求と対策に努め、不良品の削減、効率化の徹底に当たっています。<br>
-                    また新人社員への教育を行い、新人がいち早く現場での作業に慣れてもらうための教育資料の作成にあたりました。<span class="red-bold">辞める人が年間50%まで減少</span>しました。<br>
-                    本当に多くの変化を求め、前向きに行動してきました。<br>
+                    また新人社員への教育を行い、新人がいち早く現場での作業に慣れてもらうための教育資料の作成にあたりました。<span class="red-bold"></span><br>
                     <span class="red-bold">誰もやった事がない取り組みにより状況が好転する時、仕事へのやりがいや充実感を感じます。</span>
                   </div>
                 </li>
