学習したプログラミングスキルや職務内容の変更

--- a/index.html
+++ b/index.html
@@ -120,17 +120,23 @@
                     また上司や先輩、地域住民の方々に、危険箇所、交通事故多発地域等を聞き込み情報収集を実施。<br>
                     感じた事、収集した情報を基に地図に落とし込み、地域の月報として、役場に配布しました。<br>
                   </div>
-                  <span class="red-bold">→継続力、行動力や観察力</span>が身につきました。
+                  <div class="result">
+                    <span class="red-bold">→継続力、行動力や観察力</span>が身につきました。<br>
+                  </div>
                 </li>
                 <li>・2017年12月 ： 佐賀県警察 退職</li>
 
                 <li>・2018年4月 ： 株式会社SUMCO 就職
                   <div class="indent">
                     ITの根幹を担っている半導体用シリコンウェーハの製造で世界トップレベルを誇る会社経営に魅力を感じ、転職を決意しました。<br>
-                    どうすれば作業が効率化できるのかを考えました。<br>
-                    作業用台車の作成や作業手順書の見直しを行い、作業時間の短縮（５分）に成功しました。担当工程における機械による品質悪化の改善、異常発生時の原因の追求と対策に努め、不良品の削減、効率化の徹底に当たっています。<br>
-                    また新人社員への教育を行い、新人がいち早く現場での作業に慣れてもらうための教育資料の作成にあたりました。<span class="red-bold"></span><br>
-                    <span class="red-bold">誰もやった事がない取り組みにより状況が好転する時、仕事へのやりがいや充実感を感じます。</span>
+
+                    どうすれば作業が効率化できるのかを常に考えました。<br>
+                    作業をしていく中で、時間がかかっていることを見つけ改善しています。例えば、作業用台車の作成や作業手順書の見直しを行い、作業時間の短縮（５分）に成功しました。<br>
+                    また担当工程における機械による品質悪化の改善、異常発生時の原因の追求と対策に努め、不良品の削減、効率化の徹底に当たっています。<br>
+                    また新人社員への教育を行い、新人がいち早く現場での作業に慣れてもらうための教育資料の作成にあたりました。<br>
+                  </div>
+                  <div class="result">
+                    <span class="red-bold">⇨固定概念に囚われない考え方、提案力、効率化を考える力が身につきました</span>
                   </div>
                 </li>
                 
@@ -144,13 +150,12 @@
             </div>
             <div class="info">
               <h3 class="top_info">2020年に学習したプログラミングスキル</h3>
-              <p class="red-bold">5月16日から現在まで1日も休む事なく継続して学習を続けています</p>
               <ul>
-                <li>5月16日〜5月27日( 12 日) ： HTML,CSS</li>
-                <li>5月27日〜6月17日( 22 日) ： JavaScript,jQuery</li>
-                <li>6月18日〜6月30日( 13 日) ： PHP</li>
-                <li>6月30日〜8月11日( 43 日) ： WordPress</li>
-                <li>8月12日〜現在（<span id="ruby_stady"></span>日） ： Ruby,Ruby on Rails</li>
+                <h4>・HTML</h4>
+                <h4>・CSS</h4>
+                <h4>・JavaScript</h4>
+                <h4>・Ruby on Rails</h4>
+                <li></li>
               </ul>
               <p>※成果物については下記参照ください</p>
             </div>
