学習したプログラミングスキルの文字の大きさの変更

--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
             <div class="info">
               <h3 class="top_info">2020年に学習したプログラミングスキル</h3>
               <ul>
-                <h4>・HTML</h4>
-                <h4>・CSS</h4>
-                <h4>・JavaScript</h4>
-                <h4>・Ruby on Rails</h4>
+                <li>・HTML</li>
+                <li>・CSS</li>
+                <li>・JavaScript</li>
+                <li>・Ruby on Rails</li>
                 <li></li>
               </ul>
               <p>※成果物については下記参照ください</p>
