--- a/index.html
+++ b/index.html
@@ -705,54 +705,11 @@
           </section>
         </div>
       </div>
-
-      <h3 class="content_title">YouTube動画投稿</h3>
-      <div class="container">
-        <div class="left_space">
-          <p>2018年10月〜2019年5月まで投稿していたYouTube動画</p>
-          <div class="video">
-            <iframe src="https://www.youtube.com/embed/ixHykYDwky4" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-          <div class="video">
-            <iframe src="https://www.youtube.com/embed/KwzpsTaeiHw" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-        </div>
-        <div class="right_space">
-          <section class="flex">
-            <div class="icon">
-              <i class="far fa-lightbulb"></i>
-            </div>
-            <div class="info">
-              <h4 class="top_info">奈良県の観光スポットを紹介する「奈良しか」</h4>
-              <ul>
-                <li>・奈良県には世界中から観光客が来るが、観光サイトは画像情報がほとんどで情報が薄い。グローバルメディアで動画で奈良県を紹介するチャンネルを作ろう！とスタート</li>
-                <li>・本業の繁忙期とロケの過酷さが重なり4ヶ月で断念</li>
-              </ul>
-              <a href="https://www.youtube.com/channel/UCnMhYS_ActX70RfZB3C63Mw" target="_blank" class="blue-link">奈良しかチャンネル</a>
-            </div>
-          </section>
-          <section class="flex">
-            <div class="icon">
-              <i class="far fa-lightbulb"></i>
-            </div>
-            <div class="info">
-              <h4 class="top_info">無料パソコン教室〜Excel編〜</h4>
-              <ul>
-                <li>・パソコン教室は都心に高い賃料と人件費を払って運営されている。今後はオンラインで学習する人が増加すると思われるので、得意なExcelを解説するチャンネルを作ろう！とスタート</li>
-                <li>・編集に凝りだし動画一本Upする為に膨大な時間を要し、本業に影響が出始めたので4ヶ月で断念</li>
-              </ul>
-              <a href="https://www.youtube.com/channel/UC2o-OxEBk3Z7ahXfdSWGU8Q" target="_blank" class="blue-link">無料パソコン教室ゆーきチャンネル</a>
-
-              <p class="red-bold pt_30">→面白そうと思ったら速攻で実行してみる行動力、やりながら考える思考力があります。</p>
-            </div>
-          </section>
-        </div>
-      </div>
     </section>
   </div>
 
   <footer class="footer_bottom">
-    <p>Copyright - 長岡　勇輝, 2019 All Rights Reserved.</p>
+    <p>Copyright - 丸内　綜馬, 2020 All Rights Reserved.</p>
   </footer>
 
 </body>
