もくもく会の追加

--- a/index.html
+++ b/index.html
@@ -647,8 +647,8 @@
       <h3 class="content_title">もくもく会主催</h3>
       <div class="container">
         <div class="left_space">
-          <p>主催したもくもく会の集合写真</p>
-          <img src="image/mokumoku2.jpg" alt="もくもく会主催">
+          <p>参加したもくもく会の集合写真</p>
+          <img src="image/Ohsaka mokumoku.jpg" alt="もくもく会に参加">
           <p>もくもく会で登壇した動画</p>
           <video autoplay muted playsinline controls src="image/kogi.mov" class="capture_video"></video>
         </div>
@@ -660,11 +660,10 @@
             <div class="info">
               <h4 class="top_info">こだわりポイント</h4>
               <ul>
-                <li>・過去4回別のもくもく会に参加し、その後もくもく会を主催する</li>
-                <li>・所属するオンラインサロン上で呼びかけ、会場の手配を行う</li>
-                <li>・3時間30分もくもく会、30分は質問タイム。活発に意見の交換を行う</li>
+                <li>・大阪でのもくもく会に参加し、その後もくもく会を主催する</li>
+                <li>・SNSで呼びかけ、会場の手配を行う</li>
+                <li>・約4時間のもくもく会を開催、30分は質問タイム。活発に意見の交換を行う</li>
                 <li>・その後食事会も開き、メンバーの交流を深める</li>
-                <li>・第2回もくもく会を主催予定</li>
               </ul>
               <p class="red-bold pt_30">→物怖じしない性格、企画力、実行力、コミュニケーション能力があります</p>
             </div>
