--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
       <div class="container">
         <div class="left_space">
           <p>投稿したQiita記事の一部</p>
-          <a href="image/qiita.png" data-lightbox="group"><img src="image/qiita.png" width="300" alt="Qiitaへ技術記事投稿"></a>
+          <a href="image/qiita1.png" data-lightbox="group"><img src="image/qiita.png" width="300" alt="Qiitaへ技術記事投稿"></a>
         </div>
         <div class="right_space">
           <section class="flex">
@@ -685,11 +685,10 @@
             <div class="info">
               <h4 class="top_info">こだわりポイント</h4>
               <ul>
-                <li>・RailsアプリをAWSへデプロイする方法を画像付きで丁寧に解説</li>
-                <li>・6記事、10章に及ぶ記事を作成</li>
-                <li>・今後も勉強した内容を積極的にアウトプットしていく</li>
+                <li>・ブランチ名を間違えてpushしてしまった時の対処法</li>
+                <li>・今後も勉強した内容を積極的にアウトプットしていきます</li>
               </ul>
-              <p class="red-bold pt_30">→新しい知識をインプットしアウトプットする事を常に意識しています</p>
+              <p class="red-bold pt_30">→エラーが出たときや新しい知識を得たときにアウトプットする事を常に心掛けています</p>
             </div>
           </section>
           <section class="flex">
@@ -699,7 +698,7 @@
             <div class="info">
               <h4 class="top_info">Qiita記事</h4>
               <p>作成したQiita記事</p>
-              <a href="https://qiita.com/Yuki_Nagaoka/items/975b7598806d6ae0c0b2" target="_blank" class="blue-link">【画像付きで丁寧に解説】AWS(EC2)にRailsアプリをイチから上げる方法【その1〜ネットワーク,RDS環境設定編〜】</a>
+              <a href="https://qiita.com/wa-ma/items/094b75a482e4a1bf0a01">Githubで作成したブランチ名がmainであることに気付かず、ローカルのブランチ名をmasterのままpushし、エラーが出たときの対処法</a>
             </div>
           </section>
         </div>
