Qiita記事の内容変更

--- a/index.html
+++ b/index.html
@@ -671,11 +671,11 @@
         </div>
       </div>
 
-      <h3 class="content_title">Qiitaへ技術記事投稿</h3>
+      <h3 class="content_title">Qiita記事投稿</h3>
       <div class="container">
         <div class="left_space">
           <p>投稿したQiita記事の一部</p>
-          <a href="image/qiita1.png" data-lightbox="group"><img src="image/qiita.png" width="300" alt="Qiitaへ技術記事投稿"></a>
+          <a href="image/qiita1.png" data-lightbox="group"><img src="image/qiita1.png" width="300" alt="Qiitaエラー記事投稿"></a>
         </div>
         <div class="right_space">
           <section class="flex">
