Qiita記事の内容変更及びもくもく会の内容の微調整

--- a/index.html
+++ b/index.html
@@ -662,8 +662,9 @@
               <ul>
                 <li>・大阪でのもくもく会に参加し、その後もくもく会を主催する</li>
                 <li>・SNSで呼びかけ、会場の手配を行う</li>
-                <li>・約4時間のもくもく会を開催、30分は質問タイム。活発に意見の交換を行う</li>
+                <li>・約3時間のもくもく会を開催。活発に意見の交換を行う</li>
                 <li>・その後食事会も開き、メンバーの交流を深める</li>
+                <li>・第2回のもくもく会を開催していく予定</li>
               </ul>
               <p class="red-bold pt_30">→物怖じしない性格、企画力、実行力、コミュニケーション能力があります</p>
             </div>
@@ -698,7 +699,7 @@
             <div class="info">
               <h4 class="top_info">Qiita記事</h4>
               <p>作成したQiita記事</p>
-              <a href="https://qiita.com/wa-ma/items/094b75a482e4a1bf0a01">Githubで作成したブランチ名がmainであることに気付かず、ローカルのブランチ名をmasterのままpushし、エラーが出たときの対処法</a>
+              <a href="https://qiita.com/wa-ma/items/094b75a482e4a1bf0a01" target="_blank" class="blue-link">Githubで作成したブランチ名がmainであることに気付かず、ローカルのブランチ名をmasterのままpushし、エラーが出たときの対処法</a>
             </div>
           </section>
         </div>
