共同開発の内容変更

--- a/index.html
+++ b/index.html
@@ -422,27 +422,13 @@
                 <li>・所属しているオンラインサロンのメンター１人(現役エンジニア)がPMとなり、参加者４人と一緒にアプリ開発</li>
                 <li>・trelloでタスクを管理。挑戦したいタスクを作成、参加し、完了したらタスクステータスを完了にする</li>
                 <li>・GitHubからCloneして、ローカル環境で作った機能をGitHubのリモートリポジトリへpushし、プルリクを送付。メンターの方にレビューしていただき問題が無ければマージしていただく。</li>
-                <li>・参加メンバーと相談してブラッシュアップ中</li>
-                <li>・現在作成中</li>
+                <li>・参加メンバーと相談して現在ブラッシュアップ中</li>
               </ul>
-            </div>
-          </section>
-          <section class="flex">
-            <div class="icon">
-              <i class="far fa-plus-square"></i>
-            </div>
-            <div class="info">
-              <h4 class="top_info">補足資料</h4>
-              <p>作成中アプリの仕様書</p>
-              <a href="https://drive.google.com/open?id=1RYodM0tGL4jqXF1cEWml44fzneUfJeKa" target="_blank" class="blue-link">学習記録アプリ仕様書Ver.1.3.key（Googleドライブ）</a>
             </div>
           </section>
         </div>
       </div>
     </section>
-
-    
-
     <section class="text-center padding_top" id="section5">
       <div class="front_text">Javascript<h2 class="back_text">Javascript</h2></div>
       <h3 class="content_title">スロットゲーム</h3>
