ヘッダーの画像変更

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@freepc_yuki">
-  <meta name="twitter:creator" content="@freepc_yuki">
-  <meta name="twitter:title" content="長岡勇輝ポートフォリオサイト">
+  <meta name="twitter:site" content="@MaruSo_trainig">
+  <meta name="twitter:creator" content="@MaruSo_trainig">
+  <meta name="twitter:title" content="丸内綜馬ポートフォリオサイト">
   <meta name="twitter:description" content="職務経歴書、制作物一覧">
-  <meta name="twitter:image:src" content="https://www.nagaoka-portfolio.site/image/twitter-card.png">
+  <meta name="twitter:image:src" content="/image/twitter-card.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>丸内 綜馬 ポートフォリオサイト</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -26,7 +26,7 @@
       <p>
         希望職種：バックエンドエンジニア<br>
         学習中言語：Ruby,Rails<br>
-        希望勤務地：福岡  大阪  東京<br>
+        希望勤務地：大阪  東京　九州<br>
         希望年収：300万円/年 以上
       </p>
       <div class="lead">興味を持って頂きましたらご連絡ください！</div>
