E-mailアドレスの追加

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <li><a href="https://twitter.com/MaruSo_trainig" class="twitter" target="_blank">Twitter</a></li>
               <li><a href="https://github.com/maruuchi" class="github" target="_blank">GitHub</a></li>
               <li><a href="https://qiita.com/wa-ma" class="Qiita" target="_blank">Qiita</a></li>
-              <li><a href="mailto:freepc.yuki@gmail.com" class="email" target="_blank">E-mail</a></li>
+              <li><a href="mailto:soma66maruuchi@gmail.com" class="email" target="_blank">E-mail</a></li>
             </ul>
           </div>
         </div>
