大阪でのもくもく会に関する調整

--- a/index.html
+++ b/index.html
@@ -633,8 +633,8 @@
       <h3 class="content_title">もくもく会主催</h3>
       <div class="container">
         <div class="left_space">
-          <p>参加したもくもく会の集合写真</p>
-          <img src="image/Ohsaka mokumoku.jpg" alt="もくもく会に参加">
+          <p>⬇︎　大阪のもくもく会に参加した際の集合写真</p>
+          <img src="image/Ohsaka mokumoku.jpg" alt="大阪のもくもく会に参加">
           <p>もくもく会で登壇した動画</p>
           <video autoplay muted playsinline controls src="image/kogi.mov" class="capture_video"></video>
         </div>
