--- a/index.html
+++ b/index.html
@@ -633,10 +633,10 @@
       <h3 class="content_title">もくもく会主催</h3>
       <div class="container">
         <div class="left_space">
-          <p>⬇︎　大阪のもくもく会に参加した際の集合写真</p>
+          <p>⬇︎  福岡のもくもく会を主催した際の集合写真</p>
+          <img src="image/fukuokaofukai.jpg" alt="大阪のもくもく会に参加">
+          <p>⬇︎  大阪のもくもく会に参加した際の集合写真</p>
           <img src="image/Ohsaka mokumoku.jpg" alt="大阪のもくもく会に参加">
-          <p>もくもく会で登壇した動画</p>
-          <video autoplay muted playsinline controls src="image/kogi.mov" class="capture_video"></video>
         </div>
         <div class="right_space">
           <section class="flex">
