プロフィールの変更

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             <div class="info">
               <h3 class="top_info">パーソナル情報</h3>
               <p>
-                丸内　綜馬（まるうち　そうま）<br>
-                1994年11月24日生まれ / 25歳
+                名前：丸内　綜馬（まるうち　そうま）<br>
+                生年月日：1994年11月24日生まれ / 26歳
               </p>
             </div>
           </section>
