前職の内容の変更

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                     国民の安全・安心を守るというポリシーに惹かれ警察官になりました。<br>
                     半年間、警察学校で様々な訓練を行い、<span class="red-bold">自ら取り組む姿勢や学生時代の経験を評価</span>され、高校卒業の方々の指導にもあたりました。<br>
                     卒業後は警察署の地域課に配属されて交番勤務を経験。<br>
-                    管轄地域の情報不足を補うため休日に管轄地域を歩き回り、地理把握につとめ、感じた事をメモし現場活動に生かしました。<br>
+                    管轄地域の情報不足を補うため休日に管轄地域を歩き回り、地理把握につとめ、感じた事をメモして現場活動に生かしました。<br>
                     また上司や先輩、地域住民の方々に、危険箇所、交通事故多発地域等を聞き込み情報収集を実施。<br>
-                    感じた事、収集した情報を基に地図に落とし込み、地域の月報として、役場に配布しました。<br>
+                    メモして感じた事、収集した情報を基に地図に落とし込み、情報提供として地域の月報を作成し、役場等に配布しました。<br>
                   </div>
                   <div class="result">
                     <span class="red-bold">→継続力、行動力や観察力</span>が身につきました。<br>
