体調管理アプリののGithubの追加

--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
               </div>
               <div class="info">
                 <h4 class="top_info">ソースコード</h4>
-                <a href="https://github.com/risottoupdate/book_share" class="github blue-link"
-                  target="_blank">GitHub(book_share)</a>
+                <a href="https://github.com/maruuchi/health_care" class="github blue-link"
+                  target="_blank">GitHub(health_care)</a>
               </div>
             </section>
             <section class="flex">
