--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
     <section class="text-center padding_top" id="section3">
       <div class="front_text">Ruby on Rails<h2 class="back_text">Ruby on Rails</h2></div>
-        <h3 class="content_title">体重管理アプリ</h3>
+        <h3 class="content_title">体調管理アプリ</h3>
         <div class="container">
         
           <div class="left_space">
@@ -280,10 +280,11 @@
               <div class="info">
                 <h4 class="top_info">アプリの概要</h4>
                 <ul>
-                  <li>・オススメの本を紹介するアプリ</li>
-                  <li>・オススメしたい本の画像と、それに対するコメントを記載する事が可能</li>
-                  <li>・本の画像からAmazonの購入ページへ飛ぶ事が可能</li>
-                  <li>・イイね！機能も搭載</li>
+                  <li>・「体重」と「歩数」を入力しグラフで表示するアプリ</li>
+                  <li>・折れ線グラフが「体重」、棒グラフが「歩数」を表します</li>
+                  <li>・RailsのChart.jsとJavaScriptを使ってグラフ処理を実装してみたく作ったアプリ</li>
+                  <li>・間違えて値を入力した場合、記録修正ボタンから編集が可能</li>
+                  <li>・新規登録せず、ゲストログインしてから数値入力が可能</li>
                 </ul>
               </div>
             </section>
@@ -304,12 +305,12 @@
               <div class="info">
                 <h4 class="top_info">こだわりポイント</h4>
                 <ul>
-                  <li>・初めてRailsでCRUD処理を実装して制作したアプリ</li>
-                  <li>・AWSにアプリをデプロイしています。AWSへのデプロイ方法をQiitaへ投稿</li>
-                  <li> →Qiita(<a href="#">AWS(EC2)にRailsアプリをイチから上げる方法</a>)</li>
-                  <li>・ログインしないと閲覧できないページやパスワードを暗号化して保存する等の処理を実装</li>
-                  <li>・TwitterAPIと連携して、Twitterでログイン可能。その際アイコン画像を受け取り表示</li>
-                  <li>・AmazonAPIと連携して、アプリ内で書籍検索を実装予定（現在製作中）</li>
+                  <li>・投稿したデータをModelで処理して、JavaScriptへ値を渡して画面に表示</li>
+                  <li>・体重とカロリーの二軸を表示。メモリ数値も表示データに応じて動的に変化</li>
+                  <li>・Deviseを使用したログイン機能実装</li>
+                  <li>・RSpecを使用してテストコードの実装（現在作成中）</li>
+                  <li>・carrierwaveを使用した画像の投稿機能の実装（現在製作中）</li>
+                  <li>・こちらもAWS上で動作しております</li>
                 </ul>
               </div>
             </section>
@@ -320,8 +321,11 @@
               <div class="info">
                 <h4 class="top_info">使用したGem</h4>
                 <ul>
-                  <li>・omniauth-twitter：TwitterAPI使用</li>
-                  <li>・bootstrap：レスポンシブデザイン</li>
+                  <li>・Chart.js：グラフ描写</li>
+                  <li>・Devise：ログイン機能</li>
+                  <li>・gon：データ受け渡し</li>                
+                  <li>・pry-byebug：デバッグ機能</li>
+                  <li>・flatpickr：カレンダー機能</li>
                 </ul>
               </div>
             </section>
