--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
         
           <div class="left_space">
             <p>制作したアプリへのリンク</p>
-            <a href="https://healthcare5.herokuapp.com/" target="_blank"><img src="image/osusume_twitter.png"
-                alt="この本をぜひとも紹介したいオススメの一冊"></a>
+            <a href="https://healthcare5.herokuapp.com/" target="_blank"><img src="image/weight_top1.png"
+                alt="体調管理アプリの表紙"></a>
           </div>
         
           <div class="right_space">
@@ -282,7 +282,7 @@
                 <ul>
                   <li>・「体重」と「歩数」を入力しグラフで表示するアプリ</li>
                   <li>・折れ線グラフが「体重」、棒グラフが「歩数」を表します</li>
-                  <li>・RailsのChart.jsとJavaScriptを使ってグラフ処理を実装してみたく作ったアプリ</li>
+                  <li></li>
                   <li>・間違えて値を入力した場合、記録修正ボタンから編集が可能</li>
                   <li>・新規登録せず、ゲストログインしてから数値入力が可能</li>
                 </ul>
