Qiita記事及びもくもく会の写真の変更

--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
           <p>⬇︎  福岡のもくもく会を主催した際の集合写真</p>
           <img src="image/fukuokaofukai.jpg" alt="大阪のもくもく会に参加">
           <p>⬇︎  大阪のもくもく会に参加した際の集合写真</p>
-          <img src="image/Ohsaka mokumoku.jpg" alt="大阪のもくもく会に参加">
+          <img src="image/mokumoku2.jpg" alt="大阪のもくもく会に参加">
         </div>
         <div class="right_space">
           <section class="flex">
@@ -727,7 +727,7 @@
         </div>
       </div>
 
-      <h3 class="content_title">Qiita記事投稿</h3>
+      <h3 class="content_title">Qiita技術記事投稿</h3>
       <div class="container">
         <div class="left_space">
           <p>投稿したQiita記事の一部</p>
