--- a/index.html
+++ b/index.html
@@ -741,6 +741,7 @@
             <div class="info">
               <h4 class="top_info">こだわりポイント</h4>
               <ul>
+                <li>同じエラー内容でつまづいた方の参考になるように記事を作成</li>
                 <li>・ブランチ名を間違えてpushしてしまった時の対処法</li>
                 <li>・今後も勉強した内容を積極的にアウトプットしていきます</li>
               </ul>
