Qiita記事の修正

--- a/index.html
+++ b/index.html
@@ -703,8 +703,8 @@
       <div class="container">
         <div class="left_space">
           <p>⬇︎  福岡のもくもく会を主催した際の集合写真</p>
-          <img src="image/fukuokaofukai.jpg" alt="大阪のもくもく会に参加">
-          <p>⬇︎  大阪のもくもく会に参加した際の集合写真</p>
+          <img src="image/fukuokaofukai.jpg" alt="福岡のもくもく会を主催">
+          <p>⬇︎  初めて参加した大阪のもくもく会での集合写真</p>
           <img src="image/mokumoku2.jpg" alt="大阪のもくもく会に参加">
         </div>
         <div class="right_space">
@@ -716,12 +716,12 @@
               <h4 class="top_info">こだわりポイント</h4>
               <ul>
                 <li>・大阪でのもくもく会に参加し、その後もくもく会を主催する</li>
-                <li>・SNSで呼びかけ、会場の手配を行う</li>
-                <li>・約3時間のもくもく会を開催。活発に意見の交換を行う</li>
+                <li>・現役のエンジニアの方を含めて複数の方が参加</li>
+                <li>・約4時間のもくもく会を開催。活発に意見の交換を行う</li>
                 <li>・その後食事会も開き、メンバーの交流を深める</li>
                 <li>・第2回のもくもく会を開催していく予定</li>
               </ul>
-              <p class="red-bold pt_30">→物怖じしない性格、企画力、実行力、コミュニケーション能力があります</p>
+              <p class="red-bold pt_30">→企画力、実行力、コミュニケーション能力があります</p>
             </div>
           </section>
         </div>
@@ -741,8 +741,9 @@
             <div class="info">
               <h4 class="top_info">こだわりポイント</h4>
               <ul>
-                <li>同じエラー内容でつまづいた方の参考になるように記事を作成</li>
-                <li>・ブランチ名を間違えてpushしてしまった時の対処法</li>
+                <li>・同じエラー内容でつまづいた方の参考になるように記事を作成</li>
+                <li>・ブランチ名を間違えてpushしてしまった時の対処法を丁寧に記載</li>
+                <li>・アウトプットすることで自らの理解度が上昇</li>
                 <li>・今後も勉強した内容を積極的にアウトプットしていきます</li>
               </ul>
               <p class="red-bold pt_30">→エラーが出たときや新しい知識を得たときにアウトプットする事を常に心掛けています</p>
