プロフィールの写真変更

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="container">
 
         <div class="left_space">
-          <img src="image/yuki-profile2.jpg" class="profile_image" alt="長岡 勇輝（ながおか ゆうき）">
+          <img src="image/profile.photo.png" class="profile_image" alt="長岡 勇輝（ながおか ゆうき）">
           <div class="sns">
             <ul class="text_center">
               <li><a href="https://twitter.com/MaruSo_trainig" class="twitter" target="_blank">Twitter</a></li>
