職務経歴の訂正

--- a/index.html
+++ b/index.html
@@ -129,9 +129,8 @@
                 <li>・2018年4月 ： 株式会社SUMCO 就職
                   <div class="indent">
                     ITの根幹を担っている半導体用シリコンウェーハの製造で世界トップレベルを誇る会社経営に魅力を感じ、転職を決意しました。<br>
-
                     どうすれば作業が効率化できるのかを常に考えました。<br>
-                    作業をしていく中で、時間がかかっていることを見つけ改善しています。例えば、作業用台車の作成や作業手順書の見直しを行い、作業時間の短縮（５分）に成功しました。<br>
+                    作業をしていく中で、時間がかかっていることを見つけ改善しています。例えば、工具をすぐに取り出せるような作業用台車の作成や作業手順書の見直しを行い、作業時間の短縮（５分）に成功しました。<br>
                     また担当工程における機械による品質悪化の改善、異常発生時の原因の追求と対策に努め、不良品の削減、効率化の徹底に当たっています。<br>
                     また新人社員への教育を行い、新人がいち早く現場での作業に慣れてもらうための教育資料の作成にあたりました。<br>
                   </div>
