職務経歴の訂正

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                   ・2017年4月 ： 佐賀県警察に採用
                   <div class="indent">
                     国民の安全・安心を守るというポリシーに惹かれ警察官になりました。<br>
-                    半年間、警察学校で様々な訓練を行い、<span class="red-bold">自ら取り組む姿勢や学生時代の経験を評価</span>され、高校卒業の方々の指導にもあたりました。<br>
+                    半年間、警察学校で様々な訓練を行い、<span class="red-bold">自ら取り組む姿勢</span>や学生時代の経験を評価され、高校卒業の方々の指導にもあたりました。<br>
                     卒業後は警察署の地域課に配属されて交番勤務を経験。<br>
                     管轄地域の情報不足を補うため休日に管轄地域を歩き回り、地理把握につとめ、感じた事をメモして現場活動に生かしました。<br>
                     また上司や先輩、地域住民の方々に、危険箇所、交通事故多発地域等を聞き込み情報収集を実施。<br>
@@ -132,10 +132,10 @@
                     どうすれば作業が効率化できるのかを常に考えました。<br>
                     作業をしていく中で、時間がかかっていることを見つけ改善しています。例えば、工具をすぐに取り出せるような作業用台車の作成や作業手順書の見直しを行い、作業時間の短縮（５分）に成功しました。<br>
                     また担当工程における機械による品質悪化の改善、異常発生時の原因の追求と対策に努め、不良品の削減、効率化の徹底に当たっています。<br>
-                    また新人社員への教育を行い、新人がいち早く現場での作業に慣れてもらうための教育資料の作成にあたりました。<br>
+                    さらに新人社員への教育を行い、新人がいち早く現場での作業に慣れてもらうための教育資料の作成にあたりました。<br>
                   </div>
                   <div class="result">
-                    <span class="red-bold">⇨固定概念に囚われない考え方、提案力、効率化を考える力が身につきました</span>
+                    <p class="red-bold pt_30">⇨固定概念に囚われない考え方、提案力、効率化を考える力が身につきました</p>
                   </div>
                 </li>
                 
