--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@
                   <li>・体重とカロリーの二軸を表示。メモリ数値も表示データに応じて動的に変化</li>
                   <li>・Deviseを使用したログイン機能実装</li>
                   <li>・RSpecを使用してテストコードの実装（現在作成中）</li>
-                  <li>・AWSへデプロイ(VPC,RDS,EC2,ALB,SSL化)</li>
+                  <li>・Rails6をAWSへデプロイ(VPC,RDS,EC2,ALB,SSL化)</li>
+                  <li>・Rails6とRails5で作成し、バージョンによる違いを認識</li>
                 </ul>
                 <p class="red-bold pt_30">→AWSへデプロイ、ログイン機能、Gemの導入理解</p>
               </div>
