体調管理アプリのRails5の変更

--- a/index.html
+++ b/index.html
@@ -229,9 +229,8 @@
                   <li>・「体重」と「歩数」を入力しグラフで表示するアプリ</li>
                   <li>・折れ線グラフが「体重」、棒グラフが「歩数」を表します</li>
                   <li>・新規登録せず、ゲストログインしてから数値入力が可能</li>
-                  <li>・期間を指定して、グラフを見ることができる</li>
-                  <li>・間違えて値を入力した場合、記録修正ボタンから編集が可能</li>
-                  
+                  <li>・期間を指定して、グラフを見ることができます</li>
+                  <li>・間違えて値を入力した場合、記録修正ボタンから編集が可能</li>                 
                 </ul>
               </div>
             </section>
@@ -257,6 +256,7 @@
                   <li>・Deviseを使用したログイン機能実装</li>
                   <li>・RSpecを使用してテストコードの実装（現在作成中）</li>
                   <li>・Rails6をAWSへデプロイ(VPC,RDS,EC2,ALB,SSL化)</li>
+                  <li>・Rails5はHerokuにデプロイ→<a href="https://healthcare5.herokuapp.com/" target="_blank" class="blue-link">Rails5バージョン</a></li>
                   <li>・Rails6とRails5で作成し、バージョンによる違いを認識</li>
                 </ul>
                 <p class="red-bold pt_30">→AWSへデプロイ、ログイン機能、Gemの導入理解</p>
