--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
             <p>制作したアプリへのリンク</p>
             <a href="https://healthcare5.herokuapp.com/" target="_blank"><img src="image/weight-top1.png"
                 alt="体調管理アプリの表紙"></a>
+            <p>制作したアプリの実行画面動画</p>
+            <video autoplay muted playsinline controls src="" class="capture_video"></video>
           </div>
         
           <div class="right_space">
