共同開発中のアプリの準備

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
@@ -415,7 +415,7 @@
       <div class="container">
         <div class="left_space">
           <p>共同開発で制作中のアプリイメージ</p>
-          <a href="image/protime01.png" data-lightbox="group"><img src="image/protime01.png" width="300" alt="学習記録アプリ トップ画面"></a>
+          <a href="image/protime01.png" data-lightbox="group"><img src="image/protime01.png" width="300" alt="共同開発中のアプリのイメージ"></a>
         </div>
         <div class="right_space">
           <section class="flex">
