共同開発中のアプリの微調整

--- a/index.html
+++ b/index.html
@@ -416,6 +416,7 @@
         <div class="left_space">
           <p>共同開発で制作中のアプリイメージ</p>
           <a href="image/kyodokaihatsu.png" data-lightbox="group"></a><img src="image/kyodokaihatsu.png" width="300" alt="共同開発中のアプリのイメージ"></a>
+          <p>※画像はPhotoshopで作成</p>
         </div>
         <div class="right_space">
           <section class="flex">
