職務経歴の見直し

--- a/index.html
+++ b/index.html
@@ -127,10 +127,11 @@
                 <li>・2018年4月 ： 株式会社SUMCO 就職
                   <div class="indent">
                     ITの根幹を担っている半導体用シリコンウェーハの製造で世界トップレベルを誇る会社経営に魅力を感じ、転職を決意しました。<br>
-                    どうすれば作業が効率化できるのかを常に考えました。<br>
+                    どうすれば便益化できるのか・作業が効率化できるのかを考えました。主に便益化に取り組み、コストがかかっている原因を論理的に考え分析し、その都度仮説を立てて原因を追求。その結果、作業で使用している道具の発注量を<span class="red-bold">一月2割の減少</span>に成功。<br>
                     作業をしていく中で、時間がかかっていることを見つけ改善しています。例えば、工具をすぐに取り出せるような作業用台車の作成や作業手順書の見直しを行い、作業時間の短縮（５分）に成功しました。<br>
-                    また担当工程における機械による品質悪化の改善、異常発生時の原因の追求と対策に努め、不良品の削減、効率化の徹底に当たっています。<br>
+                    また担当工程における機械による品質悪化の改善、異常発生時の原因の追求と対策に努め、また不良品の削減、効率化の徹底に当たっています。<br>
                     さらに新人社員への教育を行い、新人がいち早く現場での作業に慣れてもらうための教育資料の作成にあたりました。<br>
+                    誰もやった事のない改善をした事により、上司や作業者達の喜びの顔を見た時に、仕事へのやりがいや充実感を感じます。
                   </div>
                   <div class="result">
                     <p class="red-bold pt_30">⇨固定概念に囚われない考え方、提案力、効率化を考える力が身につきました</p>
@@ -631,7 +632,7 @@
                 <li>・現役のエンジニアの方を含めて複数の方が参加</li>
                 <li>・約4時間のもくもく会を開催。活発に意見の交換を行う</li>
                 <li>・その後食事会も開き、メンバーの交流を深める</li>
-                <li>・第2回のもくもく会を開催していく予定</li>
+                <li>・第2回のもくもく会を開催する予定</li>
               </ul>
               <p class="red-bold pt_30">→企画力、実行力、コミュニケーション能力があります</p>
             </div>
