ポートフォリオに関する詳細の変更

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                   <li>・Rails5はHerokuにデプロイ→<a href="https://healthcare5.herokuapp.com/" target="_blank" class="blue-link">Rails5バージョン</a></li>
                   <li>・Rails6とRails5で作成し、バージョンによる違いを認識</li>
                 </ul>
-                <p class="red-bold pt_30">→AWSへデプロイ、ログイン機能、Gemの導入理解</p>
+                <p class="red-bold pt_30">→AWSとHerokuへのデプロイ、ログイン機能、Gemの導入理解</p>
               </div>
             </section>
             <section class="flex">
