共同開発の写真の説明文の追加

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
           <p>共同開発で使用したTrello</p>
           <a href="image/kyodokaihatsu.png" data-lightbox="group"></a><img src="image/kyodokaihatsu.png" width="300"
             alt="共同開発中のアプリのイメージ"></a>
-          <p>※画像はPhotoshopで作成</p>
+          <p>※両方の画像ともPhotoshopで作成</p>
         </div>
         <div class="right_space">
           <section class="flex">
