共同開発の写真の微調整

--- a/index.html
+++ b/index.html
@@ -415,9 +415,9 @@
       <h3 class="content_title">学習記録アプリ<br>（共同開発）</h3>
       <div class="container">
         <div class="left_space">
-          <p>共同開発で制作中のアプリイメージ</p>
+          <p>↓同開発で制作中のアプリイメージ</p>
           <a href="image/kyodokaihatsu.png" data-lightbox="group"></a><img src="image/kyodokaihatsu.png" width="300" alt="共同開発中のアプリのイメージ"></a>
-          <p>共同開発で使用したTrello</p>
+          <p>↓共同開発で使用したTrello</p>
           <a href="image/kyodokaihatsu.png" data-lightbox="group"></a><img src="image/kyodokaihatsu.png" width="300"
             alt="共同開発中のアプリのイメージ"></a>
           <p>※両方の画像ともPhotoshopで作成</p>
