共同開発の写真の追加

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
           <p>↓同開発で制作中のアプリイメージ</p>
           <a href="image/kyodokaihatsu.png" data-lightbox="group"></a><img src="image/kyodokaihatsu.png" width="300" alt="共同開発中のアプリのイメージ"></a>
           <p>↓共同開発で使用したTrello</p>
-          <a href="image/kyodokaihatsu.png" data-lightbox="group"></a><img src="image/kyodokaihatsu.png" width="300"
+          <a href="image/terllo_kyodo.png" data-lightbox="group"></a><img src="image/terllo_kyodo.png" width="300"
             alt="共同開発中のアプリのイメージ"></a>
           <p>※両方の画像ともPhotoshopで作成</p>
         </div>
